--- a/Cursos.html
+++ b/Cursos.html
@@ -36,7 +36,7 @@
   <body>
     
 <header class="navbar navbar-dark sticky-top bg-danger flex-md-nowrap p-0 ">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">Fatec Monitor</a>
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="index.html">Fatec Monitor</a>
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
