--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body>
     
 <header class="navbar navbar-dark sticky-top bg-danger flex-md-nowrap p-0 ">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">Fatec Monitor</a>
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="index.html">Fatec Monitor</a>
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -88,7 +88,7 @@
                   <div class="card shadow-sm">
                     <img  src="img/gestao-financeira.jpeg" width="100%" height="225" alt="">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-outline-danger">Cursar</button>
+                          <a href="Cursos.html"type="button" class="btn btn-sm btn-outline-danger">Cursar</a>
                         </div>
                   </div>
                 </div>
@@ -96,14 +96,14 @@
                   <div class="card shadow-sm">
                     <img  src="img/programacao-web.jpeg" width="100%" height="225" alt="">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-outline-danger">Cursar</button>
+                          <a href="Cursos.html"type="button" class="btn btn-sm btn-outline-danger">Cursar</a>
                         </div>
                   </div>
                 </div>
                 <div class="col">
                   <div class="card shadow-sm">
                     <img  src="img/banco-dados.png" width="100%" height="225" alt="">
-                    <button type="button" class="btn btn-sm btn-outline-danger">Cursar</button>
+                    <a href="Cursos.html"type="button" class="btn btn-sm btn-outline-danger">Cursar</a>
                   </div>
                   <br><!-- linha de baixo cursos-->
                 </div>
@@ -111,7 +111,7 @@
                   <div class="card shadow-sm">
                     <img  src="img/engenharia-software.jpg" width="100%" height="225" alt="">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-outline-danger">Cursar</button>
+                          <a href="Cursos.html"type="button" class="btn btn-sm btn-outline-danger">Cursar</a>
                         </div>
                   </div>
                 </div>
@@ -119,14 +119,14 @@
                   <div class="card shadow-sm">
                     <img  src="img/matematica-discreta.jpg" width="100%" height="225" alt="">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-outline-danger">Cursar</button>
+                          <a href="Cursos.html"type="button" class="btn btn-sm btn-outline-danger">Cursar</a>
                         </div>
                   </div>
                 </div>
                 <div class="col">
                   <div class="card shadow-sm">
                     <img  src="img/redes-computadores.png" width="100%" height="225" alt="">
-                    <button type="button" class="btn btn-sm btn-outline-danger">Cursar</button>
+                    <a href="Cursos.html"type="button" class="btn btn-sm btn-outline-danger">Cursar</a>
                   </div>
             </div>
     </main>
