--- a/html_legado/Cadastro.html
+++ b/html_legado/Cadastro.html
@@ -35,10 +35,18 @@
             </div><div class="col-4">
               <br><input type="text" class="form-control" placeholder="CPF" required>
             </div>
-            <div class="col-6">
+            <div class="col-4">
               <br><input type="password" id="inputPassword" class="form-control" placeholder="Senha" required>
-            </div><div class="col-6">
+            </div><div class="col-4">
               <br><input type="password" id="inputPassword" class="form-control" placeholder="Confirme senha" required>
+            </div>
+            <div class="col-4">
+              <br>
+              <select class="form-control">
+                <option selected>Nivel De Usuario</option>
+                <option value="1">Monitor</option>
+                <option value="2">Aluno</option>
+           </select>
             </div>
           </div>
           <br>
