--- a/html_legado/Login.html
+++ b/html_legado/Login.html
@@ -46,7 +46,7 @@
     </label>
   </div>
   <button class="btn btn-lg btn-danger btn-block" type="submit">Logar</button><br>
-  <a href="cadastro.html"  class="btn btn-lg btn-danger btn-block"  type="button">Cadastrar</button>
+  <a href="cadastro.php"  class="btn btn-lg btn-danger btn-block"  type="button">Cadastrar</button>
 
 </form>
 </body>
