--- a/Materias.html
+++ b/Materias.html
@@ -106,8 +106,8 @@
                                                 <i class="fa fa-square fa-stack-2x"></i>
                                                 <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
                                             </span></a>
-                                        <a href="#" class="table-link danger">
-                                            <span class="fa-stack">
+                                            <a href="" data-toggle="modal" data-target="#excluir_materia" class="table-link danger">
+                                              <span class="fa-stack">
                                                 <i class="fa fa-square fa-stack-2x"></i>
                                                 <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
                                             </span>
@@ -128,8 +128,8 @@
                                                 <i class="fa fa-square fa-stack-2x"></i>
                                                 <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
                                             </span></a>
-                                        <a href="#" class="table-link danger">
-                                            <span class="fa-stack">
+                                            <a href="" data-toggle="modal" data-target="#excluir_materia" class="table-link danger">
+                                              <span class="fa-stack">
                                                 <i class="fa fa-square fa-stack-2x"></i>
                                                 <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
                                             </span>
@@ -150,8 +150,8 @@
                                                 <i class="fa fa-square fa-stack-2x"></i>
                                                 <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
                                             </span></a>
-                                        <a href="#" class="table-link danger">
-                                            <span class="fa-stack">
+                                            <a href="" data-toggle="modal" data-target="#excluir_materia" class="table-link danger">
+                                              <span class="fa-stack">
                                                 <i class="fa fa-square fa-stack-2x"></i>
                                                 <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
                                             </span>
@@ -172,8 +172,8 @@
                                                 <i class="fa fa-square fa-stack-2x"></i>
                                                 <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
                                             </span></a>
-                                        <a href="#" class="table-link danger">
-                                            <span class="fa-stack">
+                                            <a href="" data-toggle="modal" data-target="#excluir_materia" class="table-link danger">
+                                              <span class="fa-stack">
                                                 <i class="fa fa-square fa-stack-2x"></i>
                                                 <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
                                             </span>
@@ -190,6 +190,28 @@
     </main>
     </div>
     </div>
+
+  <!--------------------------------------Modal excluir materia  ----------------------------------------->   
+     <div class="modal fade" id="excluir_materia"  tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Atenção</h5>
+              <button type="text" class="close" data-dismiss="modal">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Voce gostaria de realmente excluir essa Materia?</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger">Sim Salvar</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!---------------------------------------------------------------------------------------------->
 </body>
 <script src="js/bootstrap.bundle.min.js"></script>
 
@@ -205,5 +227,9 @@
       });
     });
     </script>
-  
+  <!-- Modal JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </html>
