Ajuste tela Curso

--- a/Cursos.html
+++ b/Cursos.html
@@ -85,14 +85,7 @@
         <!--   conteudo -->
         <div class="container">
             <div class="row">
-              <div class="col-sm-8 bg-light">
-                <div class="accordion" id="accordionExample">
-                    <div class="accordion-item ">
-                      <h2 class="accordion-header  btn-outline-danger" id="headingOne">
-                        <button class="accordion-button " type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                          Modulo 1
-                        </button>
-                      </h2>
+              <div class="col-6 bg-light">
                       <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             <ul class="list-group">
@@ -105,30 +98,6 @@
                         </div>
                       </div>
                     </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header btn-outline-danger" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                          Modulo 2
-                        </button>
-                      </h2>
-                      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <ul class="list-group">
-                                <a href="ww.google.com" class="list-group-item btn-outline-danger">O que é Gestão Financeira</a>
-                                <a href="ww.google.com" class="list-group-item btn-outline-danger">conteudo</a>
-                                <a href="ww.google.com" class="list-group-item btn-outline-danger">conteudo</a>
-                                <a href="ww.google.com" class="list-group-item btn-outline-danger">conteudo</a>
-                                <a href="ww.google.com" class="list-group-item btn-outline-danger">conteudo</a>
-                              </ul>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header btn-outline-danger" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                          Modulo 3
-                        </button>
-                      </h2>
                       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             <ul class="list-group">
@@ -140,10 +109,9 @@
                               </ul>
                         </div>
                       </div>
-                    </div>
-                  </div>
-              </div>
-              <div class="col-sm-4">
+                   
+         
+              <div class="col-4">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title">Progresso</h5>
