Ajuste botão conteúdo do monitor

--- a/Cursos.html
+++ b/Cursos.html
@@ -81,6 +81,12 @@
             <h5>40 horas</h5> 
             <button type="button" class="btn btn-outline-danger">Aulas</button>
             <button type="button" class="btn btn-outline-danger">Sobre  </button>
+            <!-- Campo do monitor de edição do conteudo  -->
+            <button type="button" class="btn btn-outline-danger">Rascunhos    </button>
+            <button type="button" class="btn btn-outline-danger">Novo  </button>
+            <!---------------------------------------------->
+
+
         </div>
         <!--   conteudo -->
         <div class="container">
