Ajustados as Interfaces

--- a/trocasenha.html
+++ b/trocasenha.html
@@ -25,7 +25,7 @@
           <br>
           <div class="botao1">
             <button class="btn btn-lg btn-danger btn-block"  data-toggle="modal" data-target="#alterar_senha" type="button">Alterar Senha</button>
-            <a href="index.php"  class="btn btn-lg btn-danger btn-block"  type="button">Voltar</button></a>
+            <a href="home.php"  class="btn btn-lg btn-danger btn-block"  type="button">Voltar</button></a>
           </div>
         </div>
         </form> 
