Cadastro de Usuários e Alunos Finalizado

--- a/formulario/index.html
+++ b/formulario/index.html
@@ -79,7 +79,7 @@
 
 				<ul class="cd-form-list">
 					<li>
-						<input type="checkbox" id="cd-checkbox-1">
+						<input type="checkbox" id="cd-checkbox-1" >
 						<label for="cd-checkbox-1">Option 1</label>
 					</li>
 
@@ -89,7 +89,7 @@
 					</li>
 
 					<li>
-						<input type="checkbox" id="cd-checkbox-3">
+						<input type="checkbox" id="cd-checkbox-3" value="false" checked>
 						<label for="cd-checkbox-3">Option 3</label>
 					</li>
 				</ul>
