Correção de falhas diversas
FIX:
- Adicionados verificações antes de realizar as alterações no banco de dados;

- Corrigido verificação do tipo de aluno na tela de cadastro

- Obrigatoriedade do telefone
removido

ADD:
+ Mensagens de sucesso nos términos das operações

--- a/formulario/index.html
+++ b/formulario/index.html
@@ -20,6 +20,10 @@
 			<div class="error-message">
 				<p>Please enter a valid email address</p>
 			</div>
+			<br>
+			<div class="error-message c">
+				<p>Please enter a valid email address</p>
+			</div>
 
 			<div class="icon">
 				<label class="cd-label" for="cd-name">Name</label>
